# serper_resolve

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
